bindata/image-pruner-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: image-pruner-networkpolicy
  namespace: openshift-image-registry
spec:
  podSelector:
      matchLabels:
        created-by: image-pruner
  policyTypes:
    - Egress
  egress:
  # Allow all egress traffic
  # required for egress to kube-apiserver pods
  - {}

  # Allow egress to openshift-kube-apiserver
  # this rule overlaps with the generic egress rule but exists for documentation purposes  
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
      podSelector:
        matchLabels:
          app: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 6443

  # Allow egress to DNS
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353

  # Allow egress to image-registry (for pruning)
  # this rule overlaps with the generic TCP egress rule but exists for documentation purposes
  - to:
    - podSelector:
        matchLabels:
          docker-registry: default
    ports:
    - protocol: TCP
      port: 5000
