bindata/image-registry-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: image-registry-networkpolicy
  namespace: openshift-image-registry
spec:

  podSelector:
    matchLabels:
      docker-registry: default
      
  policyTypes:
  - Ingress
  - Egress

  ingress:
  # Allow ingress from monitoring
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - port: 5000
      protocol: TCP

  # Allow ingress from routers for external access
  - from:
      - namespaceSelector:
          matchLabels:
            policy-group.network.openshift.io/ingress: ""
    ports:
    - port: 5000
      protocol: TCP

  # Allow ingress from all pod-network and host-network pods for image pull/push.
  # Side effect: this rule does not restrict traffic by source.
  - ports:
    - port: 5000
      protocol: TCP

  egress:
  # Allow all egress traffic
  # required for egress to kube-apiserver pods
  - {}

  # Allow egress to openshift-kube-apiserver
  # this rule overlaps with the generic egress rule but exists for documentation purposes  
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
      podSelector:
        matchLabels:
          app: openshift-kube-apiserver
    ports:
    - protocol: TCP
      port: 8443

  # Allow egress to DNS
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353

  # Allow egress to ONLY internet (external)
  # i.e. S3 access
  # this rule overlaps with the generic egress rule but exists for documentation purposes  
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        # refine the rule with the private network exception
        except:
        - 10.0.0.0/8     # RFC1918: Block access towards other private internal networks
        - 172.16.0.0/12  # RFC1918: Block access towards other private internal networks
        - 192.168.0.0/16 # RFC1918: Block access towards other private internal networks
    ports:
    - protocol: TCP
      port: 443
